# rendering-studies

./: .clang-format  .clangd  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.bat  build.sh  compile_flags.txt  conanfile.py  conanfile.txt  config.ini  debug_build.sh  release_build.sh  web_build.sh  web_deploy.sh
assets/: index.html
assets/models/: apple.fbx
assets/shaders/: anisotropic.frag  anisotropic.vert  bump_mapping.frag  bump_mapping.vert  chroma_depth.frag  chroma_depth.vert  color_coord.frag  color_coord.vert  cube_map.frag  flat_shading.frag  flat_shading.vert  gouraud_shading.frag  gouraud_shading.vert  grid.frag  grid.vert  phong_shading.frag  phong_shading.vert  ripple_effect.frag  ripple_effect.tesc  ripple_effect.tese  ripple_effect.vert  simple.frag  simple.fs  simple.vert  simple.vs  skybox.frag  skybox.vert  text.frag  text.fs  text.vert  text.vs  texture.frag  texture.fs  texture.vert  texture.vs
docs/: index.html  index.js  index.wasm
includes/RenderingStudies/: App.h  AppRegistry.h  Config.h  Demo.h  DemoRegistry.h  GL.h  Log.h  RegisterApp.h  RegisterDemo.h  Types.h  pch.h
includes/headers/: types.h
includes/rendering_studies/: app.h
src/: main.cpp
src/App/: AppFactory.h  Camera.h  Grid.h
src/App/Anisotropic/: Anisotropic.cpp  Anisotropic.h
src/App/BlenderModel/: BlenderModel.cpp  BlenderModel.h
src/App/BumpMapping/: BumpMapping.cpp  BumpMapping.h
src/App/ChromaDepth/: ChromaDepth.cpp  ChromaDepth.h
src/App/ColorCoord/: ColorCoord.cpp  ColorCoord.h
src/App/Cube/: Cube.cpp  Cube.h
src/App/CubeMap/: CubeMap.cpp  CubeMap.h
src/App/Dragon/: Dragon.cpp  Dragon.h
src/App/RippleEffect/: RippleEffect.cpp  RippleEffect.h
src/App/SimpleMesh/: SimpleMesh.cpp  SimpleMesh.h
src/App/Skybox/: Skybox.cpp  Skybox.h
src/App/SkyboxExample/: SkyboxExample.cpp  SkyboxExample.h
src/App/TeapotFlatShading/: TeapotFlatShading.cpp  TeapotFlatShading.h
src/App/TeapotShading/: TeapotShading.cpp  TeapotShading.h
src/App/TexturedCube/: TexturedCube.cpp  TexturedCube.h
src/App/Triangle/: Triangle.cpp  Triangle.h
src/Camera/: Camera.cpp  Camera.h
src/Demos/Anisotropic/: Anisotropic.cpp  Anisotropic.h
src/Demos/BumpMapping/: BumpMapping.cpp  BumpMapping.h
src/Demos/ChromaDepth/: ChromaDepth.cpp  ChromaDepth.h
src/Demos/ColorCoord/: ColorCoord.cpp  ColorCoord.h
src/Demos/Cube/: Cube.cpp  Cube.h
src/Demos/RippleEffect/: RippleEffect.cpp  RippleEffect.h
src/Demos/SimpleMesh/: SimpleMesh.cpp  SimpleMesh.h
src/Demos/SkyboxExample/: SkyboxExample.cpp  SkyboxExample.h
src/Demos/TeapotShading/: TeapotShading.cpp  TeapotShading.h
src/Demos/TexturedCube/: TexturedCube.cpp  TexturedCube.h
src/Demos/Triangle/: Triangle.cpp  Triangle.h
src/Engine/Camera/: Camera.cpp  Camera.h
src/Engine/FileManager/: FileManager.cpp
src/Engine/Grid/: Grid.cpp  Grid.h
src/Engine/Model/: Model.cpp  Model.h
src/Engine/Renderer/: Renderer.cpp  Renderer.h
src/Engine/Shader/: Shader.cpp  Shader.h
src/Engine/Skybox/: Skybox.cpp  Skybox.h
src/Engine/TextRenderer/: TextRenderer.cpp  TextRenderer.h
src/Engine/Texture/: Texture.cpp  Texture.h
src/Engine/UI/: UI.cpp  UI.h
src/Engine/Utils/: AppSelector.h  DemoSelector.h  HardwareUtil.h  InputProcessorUtil.cpp  InputProcessorUtil.h
src/Engine/Window/: Mouse.h  Window.cpp  Window.h
src/FileManager/: FileManager.cpp  FileManager.h
src/Model/: Model.cpp  Model.h
src/Shader/: Shader.cpp  Shader.h
src/TextRenderer/: TextRenderer.cpp  TextRenderer.h
src/Texture/: Texture.cpp  Texture.h
src/Utils/: HardwareUtil.h
src/Window/: Keyboard.h  Mouse.h  Window.cpp  Window.h
src/app/: AppFactory.h  app.h  app_factory.h  camera.h
src/app/BlenderModel/: BlenderModel.cpp
src/app/TexturedCube/: TexturedCube.cpp  TexturedCube.h
src/app/cube/: cube.cpp  cube.h
src/app/triangle/: triangle.cpp  triangle.h
src/file_manager/: file_manager.cpp  file_manager.h
src/shader/: shader.cpp  shader.h
src/window/: window.cpp  window.h
